<resources>
    <string name="app_name">RecommendMe</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_email">Enter Your Email</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_signup">Sign Up</string>
    <string name="signup_question_lbl">Don\'t have an account?</string>
    <string name="signup_lbl">Sign Up Now</string>
    <string name="create_an_account">Create An Account</string>
    <string name="logo">RecommendMe</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_back_to_login">Back to Login</string>
    <string name="hint_password_confirmation" translatable="false">Enter Your Password Confirmation</string>
    <string name="lbl_select_interest">Please select your interests:</string>
    <string name="lbl_welcome_user">Welcome Sopheak</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Enter Your Name</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_save_setting">Save Setting</string>
    <string name="lbl_bottom_home" />
    <string name="lbl_bottom_bookmark">Bookmark</string>
    <string name="lbl_bottom_recommendation">Recommendation</string>
    <string name="lbl_bottom_notification">Notification</string>
    <string name="lbl_bottom_profile">Profile</string>
    <string name="lbl_post_title">Your post title</string>
    <string name="hint_post_title">Add recommendation title</string>
    <string name="hint_link">Add link</string>
    <string name="hint_location">Add location</string>
    <string name="hint_comment">Add comment</string>
    <string name="lbl_save_post">Post Recommendation</string>
    <string name="lbl_description">Your description</string>
    <string name="hint_description">Add description</string>
    <string name="lbl_left_profile_setting">Profile Setting</string>
    <string name="lbl_saved_recommendation">Saved Recommendations</string>
    <string name="lbl_left_logout">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_profile_setting">Profile Setting</string>
    <string name="done">done</string>
    <string name="lbl_left_interest">Interest</string>
    <string name="hint_enter_link">Enter link</string>
    <string name="hint_new_rec_comment">Add your comment</string>
    <string name="hint_new_rec_location">Add location</string>
    <string name="lbl_new_rec_post">Post your recommendation</string>
    <string name="lbl_select_post_category">What is your recommendation about?*</string>
    <string name="lbl_where_did_you_find">Where do you find this? *</string>
    <string name="lbl_by_link">By Website</string>
    <string name="lbl_by_location">By Location</string>
    <string name="lbl_post_category">Your recommendation is about? *</string>
    <string name="lbl_post_type">Where do you find it?*</string>
    <string name="lbl_website_url">Website URL</string>
    <string name="lbl_pick_location">Please pick the location *</string>
    <string name="lbl_recommendation_title">Your recommendation Title *</string>
    <string name="lbl_rec_description">Recommendation description *</string>
    <string name="lbl_your_comment">What is your idea about this recommendation?</string>
    <string name="new_recommendation">New Recommendation</string>
    <string name="please_select_category">Please select category</string>
    <string name="title_activity_map">Map</string>
    <string name="lbl_bottom_saved">Saved</string>
    <string name="lbl_comment_post">Post</string>
    <string name="hint_add_comment">Add Comment  </string>
    <string name="post_comment">Post</string>
</resources>
