<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/baseline_home_black_36"
        android:title="Home" />

    <item
        android:id="@+id/bottom_save"
        android:icon="@drawable/baseline_class_black_36"
        android:title="@string/lbl_bottom_saved"
        />

    <item
        android:id="@+id/bottom_notification"
        android:icon="@drawable/baseline_notifications_black_36"
        android:title="@string/lbl_bottom_notification"
        />

    <item
        android:id="@+id/bottom_profile"
        android:icon="@drawable/baseline_person_black_36"
        android:title="@string/lbl_bottom_profile"
        />


</menu>