<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:background="@mipmap/bg"
    tools:context=".SignUpActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etSignUpEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@android:color/white"
            android:backgroundTintMode="src_over"
            android:ems="10"
            android:fontFamily="@font/gafata"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/whiteTransparantHalf"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/etSignUpPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/white"
            android:backgroundTintMode="src_over"
            android:ems="10"
            android:fontFamily="@font/gafata"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/whiteTransparantHalf"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSignUpEmail" />

        <EditText
            android:id="@+id/etSignUpConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@android:color/white"
            android:backgroundTintMode="src_over"
            android:ems="10"
            android:fontFamily="@font/gafata"
            android:hint="@string/hint_password_confirmation"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/whiteTransparantHalf"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="286dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:text="@string/lbl_register"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSignUpConfirmPassword"
            tools:text="@string/lbl_register" />

        <Button
            android:id="@+id/btnToLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorAccent"
            android:padding="15dp"
            android:text="@string/lbl_back_to_login"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="68dp"
            android:fontFamily="@font/lalezar"
            android:text="@string/logo"
            android:textAllCaps="false"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>